# rag-project

./: README.md  pyproject.toml
rag/: main.py
rag/components/: CSVToDocument.py  CodeCSVToDocument.py  HypotheticalDocumentEmbedding.py  HypotheticalQuestionEmbedder.py
rag/pipelines/: IndexerPipeline.py  RAGPipeline.py
scraper/: scraper.py  scraper_playground.ipynb
scraper/data/: data.csv
src/: main.py
src/rag/components/: CodeCSVToDocument.py  CustomCSVIndexer.py  HypotheticalDocumentEmbedding.py  HypotheticalQuestionEmbedder.py
src/rag/pipelines/: IndexerPipeline.py  RAGPipeline.py
